[FEAT] swagger 관련 코드 추가 및 응답값 형식 설정